# pymol_viridis

./: palettes_data.py  pyproject.toml  verify_changes.py  viridispalettes.py
